--- a/ui/src/app/views/workflowv3/run/workflowv3-run.scss
+++ b/ui/src/app/views/workflowv3/run/workflowv3-run.scss
@@ -60,3 +60,15 @@
         }
     }
 }
+ul {
+  padding-left: 0;
+  list-style: none;
+
+  .rightFloat {
+    float: right;
+  }
+
+  .content {
+    display: inline;
+  }
+}
