--- a/ui/src/app/views/workflowv3/run/workflowv3-run.html
+++ b/ui/src/app/views/workflowv3/run/workflowv3-run.html
@@ -5,49 +5,51 @@
         (onGrabbingEnd)="panelEndResize()">
         <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)"></app-tabs>
         <ng-containers *ngIf="selectedTab.key === 'problems'">
-            <div class="ui list problems">
-                <div *ngFor="let error of errors" class="item error">
-                    <i class="times circle icon"></i>
+            <ul class="infos">
+                <li *ngFor="let error of errors">
+                    <span class="error" nz-icon nzType="close-circle" nzTheme="fill"></span>
                     <div class="content">
                         Job "{{error.jobName}}": error on step
                         n°{{error.stepNumber}}. <a (click)="clickShowJobLogs(error.jobName)">Show
-                            logs...</a>
+                        logs...</a>
                     </div>
-                </div>
-                <div *ngFor="let problem of problems" class="item warning">
-                    <i class="exclamation triangle icon"></i>
+                </li>
+                <li *ngFor="let problem of problems">
+                    <span class="warning" nz-icon nzType="warning" nzTheme="fill"></span>
                     <div class="content">
                         {{problem}}.
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </ng-containers>
         <ng-containers *ngIf="selectedTab.key === 'infos'">
-            <div class="ui list infos">
-                <div *ngFor="let info of infos" class="item info">
-                    <i class="exclamation circle icon"></i>
+            <ul class="infos">
+                <li *ngFor="let info of infos">
+                    <span class="info" nz-icon nzType="info-circle" nzTheme="fill"></span>
                     <div class="content">
                         {{info}}.
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </ng-containers>
         <ng-containers *ngIf="selectedTab.key === 'results'">
-            <div class="ui list infos">
-                <div *ngFor="let result of results" class="item info">
-                    <div class="right floated content">
+            <ul class="infos">
+                <li *ngFor="let result of results">
+                    <div class="rightFloat content">
                         {{result.type}}
                         <a *ngIf="!!result.md5" title="Copy hash" ngxClipboard [cbContent]="result.md5"
-                            (click)="confirmCopy();$event.stopPropagation();"><i class="copy outline icon"></i></a>
+                           (click)="confirmCopy();$event.stopPropagation();">
+                            <span nz-icon nzType="copy" nzTheme="outline"></span>
+                        </a>
                     </div>
                     <div class="content">
-                        <a class="ui pointing" [href]="result.link" target="_blank">
+                        <a [href]="result.link" target="_blank">
                             {{result.name}}
                         </a>
                         ({{result.human_size}})
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </ng-containers>
     </app-resizable-panel>
 </div>
