--- a/ui/src/app/views/auth/callback/callback.scss
+++ b/ui/src/app/views/auth/callback/callback.scss
@@ -1,8 +1,5 @@
 @import "../../../../common";
 
-.callback {
-    .loading {
-        text-align: center;
-        color: white;
-    }
+nz-alert {
+  margin-bottom: 15px;
 }
