--- a/ui/src/app/views/home/timeline/home.timeline.scss
+++ b/ui/src/app/views/home/timeline/home.timeline.scss
@@ -1,3 +1,4 @@
+@import "../../../../common";
 .header {
   a:not(:first-of-type) {
     margin-left: 5px;
@@ -11,4 +12,17 @@
 
 .right.floated.content {
   padding-right: 10px;
+}
+
+.green {
+  color: $cds_color_green;
+}
+.blue {
+  color: $cds_color_teal;
+}
+.red {
+  color: $cds_color_red;
+}
+.grey {
+  color: $cds_color_light_grey
 }
