--- a/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
+++ b/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
@@ -26,25 +26,27 @@ ul {
           padding-bottom: 5px;
           position: relative;
 
-          .job.ui.segment {
+          .job.nzSegment {
             height: 51px;
             border: 2px solid transparent;
             display: flex;
+            text-align: center;
+            line-height: 50px;
           }
 
-          .job.ui.segment.inactive {
+          .job.nzSegment.inactive {
             background-color: $cds_color_light_grey;
             color: rgba(0, 0, 0, 0.5);
           }
 
-          .job.ui.segment.active {
+          .job.nzSegment.active {
             border: 2px solid $cds_color_teal;
             background-color: $cds_color_teal;
             color: white;
             font-weight: 600;
           }
 
-          .new.job.ui.segment {
+          .new.job.nzSegment {
             background-color: transparent;
             border: 1px dashed grey;
             display: flex;
